@@ -8,9 +8,8 @@ Copyright and license:
     Copyright 2002 PowerDNS.COM BV
 
     This program is free software; you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
-    (at your option) any later version.
+    it under the terms of version 2 of the GNU General Public License as
+    published by the Free Software Foundation.
 
     Additionally, the license of this program contains a special
     exception which allows to distribute the program in binary form when
