@@ -41,7 +41,7 @@ void declareArguments()
 {
   arg().set("local-port","The port on which we listen")="53";
   arg().setSwitch("log-failed-updates","If PDNS should log failed update requests")="";
-  arg().setSwitch("log-dns-details","If PDNS should log failed update requests")="";
+  arg().setSwitch("log-dns-details","If PDNS should log DNS non-erroneous details")="";
   arg().set("urlredirector","Where we send hosts to that need to be url redirected")="127.0.0.1";
   arg().set("smtpredirector","Our smtpredir MX host")="a.misconfigured.powerdns.smtp.server";
   arg().set("local-address","Local IP address to which we bind")="0.0.0.0";
